@@ -748,7 +748,7 @@ using namespace @cpu@; // FIXME: namespace organization still wip
 
    (lambda () (/gen-decode-insn-globals (non-multi-insns (non-alias-insns (current-insn-list)))))
    /gen-virtual-insn-finder
-   (lambda () (/gen-decode-fn (non-multi-insns (real-insns (current-insn-list)))
+   (lambda () (/gen-decode-fn (real-insns (current-insn-list))
 			      (state-decode-assist)
 			      (current-arch-insn-lsb0?)))
    )
